# GPT_ANALIZ

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test.py  Задача.txt
.github/workflows/: master.yml
API/: settings.py
API/ByBit/: kline.py
API/gemini/: api.py
API/panel/: gpt.py  settings.py
API/panel/schemas/: gpt.py  settings.py
API/schemas/: settings.py
app/ByBit/: kline.py
app/core/: klines.py  mail.py
app/core/accumulation/: plotter.py  zones.py
app/core/scripts/: general.py  trend_analiz.py
app/core/scripts/ulils/: s_redis.py
app/core/trend/: analysis.py
app/core/trend/indicators/: trend_analysis.py  trend_plot.py
app/entrypoints/: decorators.py  general.py  mail.py  new_message.py  proccess_message.py  s_redis.py  trend_analiz.py
app/entrypoints/handlers/: __init__.py  new_message.py
app/entrypoints/handlers/actions/: global_analiz.py
app/entrypoints/handlers/actions/schemas/: actions.py
app/entrypoints/handlers/system/: global_analiz.py
app/entrypoints/schemas/: actions.py  kline.py  prompt.py
conf/: settings.py
utils/: s3.py  time.py
